<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firebase.group26.multifragmentdemo.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullNameEditText"
            android:layout_marginTop="60dp"
            android:hint="@string/fullnameHint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpEmailEditText"
            android:layout_marginTop="30dp"
            android:layout_below="@id/fullNameEditText"
            android:hint="@string/emailHint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signupPasswordEditText"
            android:layout_marginTop="30dp"
            android:hint="@string/passwordHint"
            android:layout_below="@id/signUpEmailEditText"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupButton"
            android:id="@+id/signupButton"
            android:layout_marginTop="30dp"
            android:layout_below="@id/signupPasswordEditText"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CancelButton"
            android:id="@+id/cancelButton"
            android:layout_marginTop="30dp"
            android:layout_below="@id/signupButton"/>
    </LinearLayout>

</FrameLayout>
